--- a/projets/Mission6/style.css
+++ b/projets/Mission6/style.css
@@ -1,4 +1,4 @@
-/* Auteur : Khennous Moad */
+/*Khennous Moad */
 
 /* Reset global */
 * {
@@ -176,3 +176,4 @@ header {
         font-size: 0.95rem;
     }
 }
+
