--- a/projets/BD_TP3_noté/style.css
+++ b/projets/BD_TP3_noté/style.css
@@ -68,9 +68,10 @@ a:hover {
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     border-radius: 6px;
     border: 1px solid #000000;
 
 }
+
